force-app/main/default/objects/Training_Task__c/Training_Task__c.object-meta.xml
<CustomObject>
    <label>Training Task</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Training Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>