force-app/main/default/objects/Training_Task__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Sales Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>