force-app/main/default/objects/Training_Task__c/fields/Conference_Link__c.field-meta.xml
<CustomField>
    <fullName>Conference_Link__c</fullName>
    <label>Conference Link</label>
    <type>Url</type>
</CustomField>