force-app/main/default/objects/Training_Task__c/fields/Count_Personnels__c.field-meta.xml
<CustomField>
    <fullName>Count_Personnels__c</fullName>
    <label># Count Personnels</label>
    <summaryForeignKey>Training_Task_User__c.Training_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>