force-app/main/default/objects/Training_Task__c/fields/Count_Sign_ins__c.field-meta.xml
<CustomField>
    <fullName>Count_Sign_ins__c</fullName>
    <label># Count Sign-ins</label>
    <summaryFilterItems>
        <field>Training_Task_User__c.Check_in_Status__c</field>
        <operation>equals</operation>
        <value>签到</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Training_Task_User__c.Check_in_Time__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Training_Task_User__c.Training_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>