force-app/main/default/objects/Training_Task__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <label>Examination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>