force-app/main/default/objects/Training_Task__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>