force-app/main/default/objects/Training_Task__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <formula>Count_Sign_ins__c / Trainees_Number__c</formula>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>