force-app/main/default/objects/Training_Task__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未发布</fullName>
                <default>true</default>
                <label>未发布</label>
            </value>
            <value>
                <fullName>发布</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>