force-app/main/default/objects/Training_Task__c/fields/Training_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Content_Type__c</fullName>
    <label>Training Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>综合</fullName>
            </value>
            <value>
                <fullName>产品线</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>