force-app/main/default/objects/Training_Task__c/fields/Training_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Time__c</fullName>
    <label>Training Time</label>
    <type>DateTime</type>
</CustomField>