force-app/main/default/objects/Training_Task__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>巡店培训</fullName>
            </value>
            <value>
                <fullName>集中培训-线上</fullName>
            </value>
            <value>
                <fullName>集中培训-线下</fullName>
            </value>
            <value>
                <fullName>集中培训-渠道</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>