force-app/main/default/objects/Training_Task__c/recordTypes/Training_New.recordType-meta.xml
<RecordType>
    <fullName>Training_New</fullName>
    <active>true</active>
    <label>Training New</label>
</RecordType>