force-app/main/default/objects/Training_Task__c/recordTypes/Training_Publish.recordType-meta.xml
<RecordType>
    <fullName>Training_Publish</fullName>
    <active>true</active>
    <label>Training Publish</label>
</RecordType>