force-app/main/default/objects/Training_Task__c/recordTypes/Training_View.recordType-meta.xml
<RecordType>
    <fullName>Training_View</fullName>
    <active>true</active>
    <label>Training View</label>
</RecordType>