force-app/main/default/objects/Training_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Training_Content_Type__c</columns>
    <columns>Trainer_Name__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Training_Content__c</columns>
    <columns>Training_Address__c</columns>
    <columns>Training_Time__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Task_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Training Tasks</label>
</ListView>